# pulse2.0

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AUDIT_20_FASI_PULSEHR.md  AUDIT_FIXES_26_04.md  AUDIT_REPORT_FASE2_3.md  BLOCKER_FIXES_REPORT_26_04.md  DEPLOY_RENDER_VERCEL.md  FASE5_SUMMARY.json  FASE6_REPORT.md  FASE_18_COMPLETE.md  FASE_7_8_REPORT.md  Makefile  PRECOMMIT_SETUP.md  PULSEHR_90PERCENT_CLOSED_BETA_REPORT.md  PULSEHR_FUNCTIONAL_AUDIT_AND_FIX_REPORT.md  PULSEHR_TECHNICAL_AUDIT_REPORT.md  README.md  REPORT_RENDER_CLEAN_BUILD.md  WORKFLOW_STATUS_REPORT.md  content_script.md  docker-compose.yml  index.html  landing-preview.html  package-lock.json  package.json  render.yaml
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.disabled  Procfile  SETUP_LOCAL.md  build.sh  manage.py  pyproject.toml  render.env.example  render.yaml  requirements.txt  setup-local.bat  setup-local.ps1  start.sh
backend/api/: health.py
backend/backend/: middleware.py  settings.py
backend/config/: settings.py  urls.py
backend/users/: admin.py  analytics_views.py  automation_views.py  consultant_advanced_views.py  cookie_auth.py  exceptions.py  managers.py  models.py  notification_push.py  payroll_services.py  payroll_views.py  permissions.py  pricing_admin_views.py  pricing_views.py  report_generators.py  reports_views.py  safety_views.py  saml_views.py  serializers.py  services.py  signature_views.py  stripe_services.py  tests_e2e.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  (+21 more)
(+935 files in other folders)
